apps/homarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: dashboard
spec:
  type: NodePort
  selector:
    app: homarr
  ports:
  - protocol: TCP
    port: 7575
    targetPort: 7575
    nodePort: 31575 #
