apps/homarr/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: dashboard # this is where your Middleware or TLSOption should live
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`homarr.fle.api54.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: homarr
      port: 7575
